# kyoto-kaigo-search

./: README.md  app.py  pyproject.toml  utils.py
data/: kaigo-all-20240901.csv
